# spomienka

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md
.github/workflows/: check-viewer.yml
admin/: README.md  index.html  package-lock.json  package.json  tsconfig.json
admin/src/: App.tsx  constants.ts  index.css  main.tsx
admin/src/components/: ErrorBoundary.tsx  SecureApiKeyDisplay.tsx
admin/src/pages/: ApprovalsPage.tsx  LibraryPage.tsx  LoginPage.tsx  SettingsPage.tsx  UploadPage.tsx  UsersPage.tsx
admin/src/pb/: auth.tsx  client.ts
admin/src/types/: pocketbase.ts
backend/: README.md  pb_schema.json
backend/pb_hooks/: media.pb.js  utils.js
development_tools/: uninstaller.txt
docs/: architecture.md  installer.md
scripts/: install_pi.sh
viewer/: Cargo.toml  README.md
viewer/src/: assets.rs  cache.rs  main.rs  realtime.rs  renderer.rs  video.rs
